bug 666504 - Ignore role presentation on focusable elements r=davidb, marcoz